# test-Helikite-processing

./: .gitignore  Dockerfile  Helikite.ipynb  Makefile  README.md  conversion_functions.R  merging_20211014_02.R  open_file_functions.R  pyproject.toml
.github/workflows/: docker-publish.yml  pytest.yml
helikite/: __init__.py  config.yaml  config_template.yaml  constants.py  helikite.py  plots.py  preprocess.py
helikite/classes/: cleaning.py
helikite/config/: __init__.py  base.py  constants.py  flight_computer.py  mcpc.py  msems.py  ozone.py  pico.py  pops.py  smart_tether.py  stap.py
helikite/config/instrument/: __init__.py  base.py  flight_computer.py  mcpc.py  msems.py  ozone.py  pico.py  pops.py  smart_tether.py  stap.py
helikite/instruments/: __init__.py  base.py  filter.py  flight_computer.py  mcpc.py  msems.py  ozone.py  pico.py  pops.py  smart_tether.py  stap.py
helikite/metadata/: flights.py
helikite/processing/: conversions.py  helpers.py  outliers.py  preprocess.py  sorting.py
helikite/processing/post/: altitude.py  co2.py  crosscorrelation.py  wind.py
helikite/tests/: conftest.py  test_base_instrument.py  test_conversions.py  test_plots.py  test_preprocess.py  test_smart_tether.py
helikite/tests/cleaner/: conftest.py  mock.py  test_core.py  test_dependencies.py  test_helpers.py  test_init.py  test_merging.py
helikite/tests/cli/: test_commands.py  test_execute.py  test_generate_config.py  test_pipeline.py  test_preprocess_cli.py  test_version.py
helikite/tests/instruments/: test_base_instrument.py  test_flight_computer_1.py
helikite/tests/metadata/: test_load.py
helikite/tests/postprocess/: test_co2.py
helikite/tests/process/: test_preprocess.py
helikite/tests/resources/: smart_tether_during_midnight.csv
helikite/tests/resources/campaigns/20220929/: 8140_095902.txt  HK_20220929x001.csv  LOG_20220929.txt  LOG_20220929_A.csv  STAP_220929A0_processed.txt  mSEMS_103_220929_101343_INVERTED.txt  mSEMS_103_220929_101343_READINGS.txt  mSEMS_103_220929_101343_SCAN.txt
helikite/tests/resources/campaigns/20240402/: 20240402_A.csv  240402A1_STAP_inverted.txt  FC_LOG_20240402A.txt  HK_20240402x002.csv  housekeeping.csv  mSEMS_103_240402_094630_INVERTED.txt  mSEMS_103_240402_094630_READINGS.txt  mSEMS_103_240402_094630_SCAN.txt
(+2 files in other folders)
